--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "type": "git",
     "url": "git+https://github.com/ShellyAmbar/rn-animated-pagination-indicator.git"
   },
+  "peerDependencies": {
+    "react": "18.2.0",
+    "react-native": "0.72.3"
+  },
   "keywords": [
     "pagination",
     "indicators",
